fix: routes for all images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <root id="root"></root>
     <div class="wrapper">
-      <img class="menu-bg" src="src/assets/menu-bg.svg" loading="lazy" />
+      <img class="menu-bg" src="./src/assets/menu-bg.svg" loading="lazy" />
       <nav class="menu">
         <ul class="menu-list">
           <li class="menu-item"><a href="#about">О Каталонии</a></li>
@@ -22,7 +22,7 @@
         </ul>
       </nav>
       <header class="header">
-        <img class="header-bg" src="/src/assets/header-bg.svg" loading="lazy" />
+        <img class="header-bg" src="./src/assets/header-bg.svg" loading="lazy" />
         <div class="header-intro">
           <h1 class="header__title">
             Каталония <br />
@@ -32,7 +32,7 @@
         </div>
         <a href="#about">
           <button class="circle header">
-            <img class="circle-text header" src="src/assets/img/header_circle.svg" loading="lazy" />
+            <img class="circle-text header" src="./src/assets/img/header_circle.svg" loading="lazy" />
             <img class="circle-arrow header" src="./src/assets/header-arrow.svg" loading="lazy" />
           </button>
         </a>
@@ -41,14 +41,14 @@
       <section id="about" class="about">
         <div class="about__what-wait">
           <button class="circle about">
-            <img class="circle-text" src="src/assets/img/about_circle.svg" loading="lazy" />
-            <img class="circle-arrow" src="src/assets/img/about-arrow.svg" loading="lazy" />
+            <img class="circle-text" src="./src/assets/img/about_circle.svg" loading="lazy" />
+            <img class="circle-arrow" src="./src/assets/img/about-arrow.svg" loading="lazy" />
           </button>
           <div class="about__what-wait-image">
             <div class="about__image-wrapper">
-              <img class="about__what-wait-image-picture md-size" src="src/assets/img/about1.png" loading="lazy" />
-              <img class="about__what-wait-image-picture md-size" src="src/assets/img/about2.png" loading="lazy" />
-              <img class="about__what-wait-image-picture md-size" src="src/assets/img/about3.png" loading="lazy" />
+              <img class="about__what-wait-image-picture md-size" src="./src/assets/img/about1.png" loading="lazy" />
+              <img class="about__what-wait-image-picture md-size" src="./src/assets/img/about2.png" loading="lazy" />
+              <img class="about__what-wait-image-picture md-size" src="./src/assets/img/about3.png" loading="lazy" />
             </div>
             <div class="about__what-wait-container">
               <div class="about__what-wait-description">
@@ -59,7 +59,7 @@
                 </p>
               </div>
 
-              <img class="about__what-wait-image-bottom" src="src/assets/img/about_mask_text.svg" loading="lazy" />
+              <img class="about__what-wait-image-bottom" src="./src/assets/img/about_mask_text.svg" loading="lazy" />
             </div>
           </div>
           <div class="about__what-wait-text">
@@ -75,10 +75,10 @@
             </ul>
             <button class="about__what-wait-button">
               <span class="about__what-wait-button-text">Правила участия</span>
-              <img class="about__what-wait-button-arrow" src="src/assets/img/about_rule-arrow.svg" loading="lazy" />
+              <img class="about__what-wait-button-arrow" src="./src/assets/img/about_rule-arrow.svg" loading="lazy" />
             </button>
           </div>
-          <img class="about-bg1" src="/src/assets/about-bg1.svg" loading="lazy" />
+          <img class="about-bg1" src="./src/assets/about-bg1.svg" loading="lazy" />
           <div class="rules-modal">
             <svg class="rules-close-button" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd" d="M1.20711 0L0.5 0.707107L12.5209 12.728L0.500042 24.7488L1.20715 25.4559L13.228 13.4351L25.2487 25.4558L25.9558 24.7487L13.9351 12.728L25.9559 0.707182L25.2488 7.53403e-05L13.228 12.0209L1.20711 0Z" fill="black" />
@@ -118,14 +118,14 @@
             <a class="link" href="./src/pages/secondPage.html"><button class="about__button">Узнать</button></a>
           </div>
           <div class="about__quote">
-            <img class="about__quote-img-michail" src="/src/assets/img/Michail.png" />
-            <img class="about__quote-img-catalonia" src="/src/assets/img/about_quote.png" />
+            <img class="about__quote-img-michail" src="./src/assets/img/Michail.png" />
+            <img class="about__quote-img-catalonia" src="./src/assets/img/about_quote.png" />
             <div class="about__quote-text">
               <p>Приятный средиземноморский климат, красивейшая природа и развитая экономика делают Каталонию очень привлекательным местом для туризма</p>
               <p class="about__quote-text-bottom"><b>Михаил Сидоров</b>,<br />представитель Каталонского Агентства по Туризму</p>
             </div>
           </div>
-          <img class="about-bg2" src="/src/assets/img/about-bg2.svg" />
+          <img class="about-bg2" src="./src/assets/img/about-bg2.svg" />
         </div>
       </section>
 
@@ -136,7 +136,7 @@
         </div>
         <div class="learning__webinars-container">
           <div class="learning__webinar">
-            <img class="learning__webinar-bg" src="src/assets/img/learning_bg1.svg" />
+            <img class="learning__webinar-bg" src="./src/assets/img/learning_bg1.svg" />
             <div class="learning__webinar-date">
               <p class="h2 learning">6 апреля, вторник</p>
             </div>
@@ -150,14 +150,14 @@
                 <p class="learning__expert-title">Эксперты: Офис по туризму Женевы</p>
                 <div class="learning__experts">
                   <div class="learning__expert-container">
-                    <img class="learning__expert-photo" src="src/assets/img/learning_photo.png" />
+                    <img class="learning__expert-photo" src="./src/assets/img/learning_photo.png" />
                     <div>
                       <p class="learning__expert-name">Анна Трегубкина</p>
                       <p class="learning__expert-description">менеджер Совета по туризму Сингапура в Восточной Европе</p>
                     </div>
                   </div>
                   <div class="learning__expert-container">
-                    <img class="learning__expert-photo" src="src/assets/img/learning_photo.png" />
+                    <img class="learning__expert-photo" src="./src/assets/img/learning_photo.png" />
                     <div>
                       <p class="learning__expert-name">Анна Трегубкина</p>
                       <p class="learning__expert-description">менеджер Совета по туризму Сингапура в Восточной Европе</p>
@@ -169,7 +169,7 @@
             </div>
           </div>
           <div class="learning__webinar">
-            <img class="learning__webinar-bg" src="src/assets/img/learning_bg2.svg" />
+            <img class="learning__webinar-bg" src="./src/assets/img/learning_bg2.svg" />
             <div class="learning__webinar-date">
               <p class="h2 learning">7 апреля, среда</p>
             </div>
@@ -183,14 +183,14 @@
                 <p class="learning__expert-title">Эксперты: Офис по туризму Женевы</p>
                 <div class="learning__experts">
                   <div class="learning__expert-container">
-                    <img class="learning__expert-photo" src="src/assets/img/learning_photo.png" />
+                    <img class="learning__expert-photo" src="./src/assets/img/learning_photo.png" />
                     <div>
                       <p class="learning__expert-name">Анна Трегубкина</p>
                       <p class="learning__expert-description">менеджер Совета по туризму Сингапура в Восточной Европе</p>
                     </div>
                   </div>
                   <div class="learning__expert-container">
-                    <img class="learning__expert-photo" src="src/assets/img/learning_photo.png" />
+                    <img class="learning__expert-photo" src="./src/assets/img/learning_photo.png" />
                     <div>
                       <p class="learning__expert-name">Анна Трегубкина</p>
                       <p class="learning__expert-description">менеджер Совета по туризму Сингапура в Восточной Европе</p>
@@ -202,7 +202,7 @@
             </div>
           </div>
           <div class="learning__webinar">
-            <img class="learning__webinar-bg" src="src/assets/img/learning_bg3.svg" />
+            <img class="learning__webinar-bg" src="./src/assets/img/learning_bg3.svg" />
             <div class="learning__webinar-date">
               <p class="h2 learning">8 апреля, четверг</p>
             </div>
@@ -216,14 +216,14 @@
                 <p class="learning__expert-title">Эксперты: Офис по туризму Женевы</p>
                 <div class="learning__experts">
                   <div class="learning__expert-container">
-                    <img class="learning__expert-photo" src="src/assets/img/learning_photo.png" />
+                    <img class="learning__expert-photo" src="./src/assets/img/learning_photo.png" />
                     <div>
                       <p class="learning__expert-name">Анна Трегубкина</p>
                       <p class="learning__expert-description">менеджер Совета по туризму Сингапура в Восточной Европе</p>
                     </div>
                   </div>
                   <div class="learning__expert-container">
-                    <img class="learning__expert-photo" src="src/assets/img/learning_photo.png" />
+                    <img class="learning__expert-photo" src="./src/assets/img/learning_photo.png" />
                     <div>
                       <p class="learning__expert-name">Анна Трегубкина</p>
                       <p class="learning__expert-description">менеджер Совета по туризму Сингапура в Восточной Европе</p>
@@ -239,22 +239,22 @@
 
       <section id="regions" class="regions">
         <div class="regions__maps">
-          <img class="regions__bg" src="src/assets/img/regions_map1.svg" loading="lazy" />
+          <img class="regions__bg" src="./src/assets/img/regions_map1.svg" loading="lazy" />
           <div class="regions__flys">
             <div class="regions__fly-1">
-              <img src="src/assets/img/regiona_fly.svg" loading="lazy" />
+              <img src="./src/assets/img/regiona_fly.svg" loading="lazy" />
               <p>Льейда</p>
             </div>
             <div class="regions__fly-2">
-              <img src="src/assets/img/regiona_fly.svg" loading="lazy" />
+              <img src="./src/assets/img/regiona_fly.svg" loading="lazy" />
               <p>Жирона</p>
             </div>
             <div class="regions__fly-3">
-              <img src="src/assets/img/regiona_fly.svg" loading="lazy" />
+              <img src="./src/assets/img/regiona_fly.svg" loading="lazy" />
               <p>Реус</p>
             </div>
             <div class="regions__fly-4">
-              <img src="src/assets/img/regiona_fly.svg" loading="lazy" />
+              <img src="./src/assets/img/regiona_fly.svg" loading="lazy" />
               <p>Барселона</p>
             </div>
           </div>
@@ -327,7 +327,7 @@
             </div>
           </div>
           <div class="regions__hint">
-            <img class="regions__hint-arrow" src="src/assets/img/regions_hint-arrow.svg" loading="lazy" />
+            <img class="regions__hint-arrow" src="./src/assets/img/regions_hint-arrow.svg" loading="lazy" />
             <p class="regions__hint-text">Кликай и изучай возможности</p>
           </div>
           <div class="regions__modal">
@@ -374,7 +374,7 @@
       </section>
 
       <section id="everybody" class="everybody">
-        <img class="everybody-bg" src="/src/assets/everebody.svg" loading="lazy" />
+        <img class="everybody-bg" src="./src/assets/everebody.svg" loading="lazy" />
         <div class="everybody__title">
           <h2 class="h2">Каталония — для всех</h2>
           <p class="everybody-description">Руководители направления крупных туроператоров уже поделились своими фишками для отличного отдыха. Соберите мозаику отдыха, которая подойдет именно вашему туристу!</p>
@@ -388,8 +388,8 @@
                 <button class="everybody__family-button">Узнать</button>
               </div>
             </div>
-            <img class="everybody__images__family-rest-1" src="src/assets/img/family-rest.png" loading="lazy" />
-            <img class="everybody__images__family-rest-2" src="src/assets/img/family-rest-text2.png" loading="lazy" />
+            <img class="everybody__images__family-rest-1" src="./src/assets/img/family-rest.png" loading="lazy" />
+            <img class="everybody__images__family-rest-2" src="./src/assets/img/family-rest-text2.png" loading="lazy" />
             <svg class="everybody__images__family-rest-3" width="432" height="317" viewBox="0 0 432 317" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path class="everybody__images__family-rest-3-svg" d="M130.19 -0.00926112L15.0733 14.6254L0.859788 205.313L203.904 309.601L401.686 316.57L431.665 6.96619L288.58 14.6249L130.19 -0.00926112Z" fill="#FEE629" />
             </svg>
@@ -403,8 +403,8 @@
                 <button class="everybody__active-button">Узнать</button>
               </div>
             </div>
-            <img class="everybody__images__active-rest-1" src="src/assets/img/active-rest.png" loading="lazy" />
-            <img class="everybody__images__active-rest-2" src="src/assets/img/active-rest-text2.png" loading="lazy" />
+            <img class="everybody__images__active-rest-1" src="./src/assets/img/active-rest.png" loading="lazy" />
+            <img class="everybody__images__active-rest-2" src="./src/assets/img/active-rest-text2.png" loading="lazy" />
             <svg class="everybody__images__active-rest-3" width="433" height="333" viewBox="0 0 433 333" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path class="everybody__images__active-rest-3-svg" d="M89.0941 17.3751L13.0817 0.358301L0.0350075 221.246L202.994 325.561L400.69 332.536L432.649 6.87302L387.142 17.3814L220.115 6.86853L89.0941 17.3751Z" fill="#E33F00" />
             </svg>
@@ -418,8 +418,8 @@
                 <button class="everybody__new-button">Узнать</button>
               </div>
             </div>
-            <img class="everybody__images__new-rest-1" src="src/assets/img/new-rest.png" loading="lazy" />
-            <img class="everybody__images__new-rest-2" src="src/assets/img/new-rest-text2.png" loading="lazy" />
+            <img class="everybody__images__new-rest-1" src="./src/assets/img/new-rest.png" loading="lazy" />
+            <img class="everybody__images__new-rest-2" src="./src/assets/img/new-rest-text2.png" loading="lazy" />
             <svg class="everybody__images__new-rest-3" width="434" height="327" viewBox="0 0 434 327" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path class="everybody__images__new-rest-3-svg" d="M66.7905 19.5868L0.762173 35.1674L0.757419 215.006L203.613 319.259L401.214 326.221L433.173 0.71975L409.18 11.0744L329.706 0.722484L150.263 29.0883L66.7905 19.5868Z" fill="#73CCE3" />
             </svg>
@@ -428,7 +428,7 @@
       </section>
 
       <section id="features" class="features">
-        <img class="bg bg_features" src="/src/assets/img/features/bg.svg" loading="lazy" />
+        <img class="bg bg_features" src="./src/assets/img/features/bg.svg" loading="lazy" />
         <section class="features__tour">
           <div class="features__product">
             <div class="features__content-product">
@@ -443,7 +443,7 @@
               <button class="features__button">Изучить</button>
             </div>
             <div class="features__image-wrapper">
-              <img class="features__image-1" src="/src/assets/img/features/image1.png" loading="lazy" />
+              <img class="features__image-1" src="./src/assets/img/features/image1.png" loading="lazy" />
             </div>
           </div>
         </section>
@@ -451,7 +451,7 @@
         <section class="features__work">
           <div class="features__product">
             <div class="features__image-wrapper">
-              <img class="features__image-2" src="/src/assets/img/features/image2.png" loading="lazy" />
+              <img class="features__image-2" src="./src/assets/img/features/image2.png" loading="lazy" />
             </div>
             <div class="features__content-work">
               <h2 class="h2 features__title">
@@ -479,7 +479,7 @@
               <button class="features__button">Пройти тест</button>
             </div>
             <div class="features__image-wrapper">
-              <img class="features__image-3" src="/src/assets/img/features/image3.png" loading="lazy" />
+              <img class="features__image-3" src="./src/assets/img/features/image3.png" loading="lazy" />
             </div>
           </div>
         </section>
@@ -489,7 +489,7 @@
         <p class="h2">Рейтинг участников</p>
         <p class="ranking-description">Узнайте, сколько баллов вам осталось набрать, чтобы выиграть призы</p>
         <div class="ranking__table">
-          <img class="ranking__bg" src="src/assets/img/ranking/bg.svg" />
+          <img class="ranking__bg" src="./src/assets/img/ranking/bg.svg" />
           <div class="ranking__info">
             <div class="ranking__title">Ваш результат:</div>
             <div class="ranking__description">У вас пока нет баллов.<br /><a href="#" class="ranking__description-link">Как получить?</a></div>
@@ -506,12 +506,12 @@
           </div>
         </div>
         <div class="ranking__pagination">
-          <img class="ranking__bg" src="src/assets/img/ranking/pagination-bg.svg" />
+          <img class="ranking__bg" src="./src/assets/img/ranking/pagination-bg.svg" />
         </div>
       </section>
 
       <footer id="footer" class="footer">
-        <img class="footer-bg" src="src/assets/img/footer/footer-bg.svg" />
+        <img class="footer-bg" src="./src/assets/img/footer/footer-bg.svg" />
         <div class="footer__fedback">
           <p class="footer__fedback-title">Уважаемые участники!</p>
           <p class="footer__fedback-description">Мы будем рады ответить на любые вопросы о проекте. Пишите нам на почту: <a href="mailto:academy@profi.travel">academy@profi.travel</a></p>
@@ -524,7 +524,7 @@
           <p class="footer__creator-info">Проект компании ООО «Профи Трэвел» 2020</p>
         </div>
       </footer>
-      <script type="module" src="/src/main.tsx"></script>
+      <script type="module" src="./src/main.tsx"></script>
     </div>
   </body>
 </html>
