--- a/src/pages/secondPage.html
+++ b/src/pages/secondPage.html
@@ -11,13 +11,13 @@
       <img class="menu-bg" src="./src/assets/menu-bg.svg" loading="lazy" />
       <nav class="menu">
         <ul class="menu-list">
-          <li class="menu-item"><a href="index.html#about">О Каталонии</a></li>
-          <li class="menu-item"><a href="index.html##learning">Вебинары</a></li>
-          <li class="menu-item"><a href="index.html##regions">Карта</a></li>
-          <li class="menu-item"><a href="index.html##everybody">Кому подойдет</a></li>
-          <li class="menu-item"><a href="index.html##features">Гранд Тур</a></li>
-          <li class="menu-item"><a href="index.html##ranking">Бизнес-партнеры</a></li>
-          <li class="menu-item"><a href="./src/pages/testPage.html">Тест</a></li>
+          <li class="menu-item"><a href="/index.html#about">О Каталонии</a></li>
+          <li class="menu-item"><a href="/index.html##learning">Вебинары</a></li>
+          <li class="menu-item"><a href="/index.html##regions">Карта</a></li>
+          <li class="menu-item"><a href="/index.html##everybody">Кому подойдет</a></li>
+          <li class="menu-item"><a href="/index.html##features">Гранд Тур</a></li>
+          <li class="menu-item"><a href="/index.html##ranking">Бизнес-партнеры</a></li>
+          <li class="menu-item"><a href="./testPage.html">Тест</a></li>
         </ul>
       </nav>
       <header class="header second-header">
@@ -103,6 +103,6 @@
         </div>
       </footer>
     </div>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
