--- a/src/pages/testPage.html
+++ b/src/pages/testPage.html
@@ -11,12 +11,12 @@
       <img class="menu-bg" src="./src/assets/menu-bg.svg" loading="lazy" />
       <nav class="menu">
         <ul class="menu-list">
-          <li class="menu-item"><a href="index.html#about">О Каталонии</a></li>
-          <li class="menu-item"><a href="index.html##learning">Вебинары</a></li>
-          <li class="menu-item"><a href="index.html##regions">Карта</a></li>
-          <li class="menu-item"><a href="index.html##everybody">Кому подойдет</a></li>
-          <li class="menu-item"><a href="index.html##features">Гранд Тур</a></li>
-          <li class="menu-item"><a href="index.html##ranking">Бизнес-партнеры</a></li>
+          <li class="menu-item"><a href="/index.html#about">О Каталонии</a></li>
+          <li class="menu-item"><a href="/index.html##learning">Вебинары</a></li>
+          <li class="menu-item"><a href="/index.html##regions">Карта</a></li>
+          <li class="menu-item"><a href="/index.html##everybody">Кому подойдет</a></li>
+          <li class="menu-item"><a href="/index.html##features">Гранд Тур</a></li>
+          <li class="menu-item"><a href="/index.html##ranking">Бизнес-партнеры</a></li>
           <li class="menu-item"><a href="#test">Тест</a></li>
         </ul>
       </nav>
@@ -122,6 +122,6 @@
       </footer>
     </div>
 
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
