--- a/src/pages/secondPage.html
+++ b/src/pages/secondPage.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="second-page-wrapper">
-      <img class="menu-bg" src="./src/assets/menu-bg.svg" loading="lazy" />
+      <img class="menu-bg" src="/src/assets/menu-bg.svg" loading="lazy" />
       <nav class="menu">
         <ul class="menu-list">
           <li class="menu-item"><a href="/index.html#about">О Каталонии</a></li>
@@ -21,29 +21,29 @@
         </ul>
       </nav>
       <header class="header second-header">
-        <img class="header-bg" src="./src/assets/img/secondpage/bg-header.svg" loading="lazy" />
+        <img class="header-bg" src="/src/assets/img/secondpage/bg-header.svg" loading="lazy" />
         <div class="header-intro">
           <h1 class="header__title">Самое главное <br />о Каталонии</h1>
           <p class="header__text">Каждый уникальный узор мозаики начинается с крепкой основы, поэтому прежде чем предложить туристам неповторимый отдых, изучите базовую информацию о направлении и рекомендации от Каталонского Агентства по Туризму</p>
         </div>
         <a href="#section-1">
           <button class="second-circle circle">
-            <img class="circle-text header" src="./src/assets/img/header_circle.svg" loading="lazy" />
-            <img class="circle-arrow header" src="./src/assets/header-arrow.svg" loading="lazy" />
+            <img class="circle-text header" src="/src/assets/img/header_circle.svg" loading="lazy" />
+            <img class="circle-arrow header" src="/src/assets/header-arrow.svg" loading="lazy" />
           </button>
         </a>
       </header>
 
       <section id="section-1" class="section-1">
-        <img class="header-bg" src="./src/assets/img/secondpage/bg1.svg" loading="lazy" />
+        <img class="header-bg" src="/src/assets/img/secondpage/bg1.svg" loading="lazy" />
         <p class="section-1__text"><b>Каталония</b> — знаменитое автономное сообщество Испании, которое разделено на <b>4 провинции — Барселону, Таррагону, Жерону и Льейду</b>, — расположилось на северо-востоке Пиренейского полуострова. Эта старинная область Испании с насыщенным историческим прошлым сегодня славится своей национальной кухней, городскими праздниками и фестивалями, художниками с мировыми именами и, конечно, побережьем с нежным золотым песком и кристально чистым Средиземным морем.</p>
       </section>
 
       <section class="section-2">
-        <img class="header-bg" src="./src/assets/img/secondpage/bg2.svg" loading="lazy" />
+        <img class="header-bg" src="/src/assets/img/secondpage/bg2.svg" loading="lazy" />
         <div class="qoute-wrapper">
           <div class="qoute">
-            <img class="img-michail" src="./src/assets/img/Michail.png" />
+            <img class="img-michail" src="/src/assets/img/Michail.png" />
             <p class="section-2__quote-text-bottom">
               <b>Михаил Сидоров</b>,<br />
               представитель Каталонского<br />
@@ -62,15 +62,15 @@
       </section>
 
       <section class="section-3">
-        <img class="header-bg" src="./src/assets/img/secondpage/bg3.svg" loading="lazy" />
+        <img class="header-bg" src="/src/assets/img/secondpage/bg3.svg" loading="lazy" />
         <p class="section-1__text">Каталония — знаменитое автономное сообщество Испании, которое разделено на 4 провинции — Барселону, Таррагону, Жерону и Льейду, — расположилось на северо-востоке Пиренейского полуострова. Эта старинная область Испании с насыщенным историческим прошлым сегодня славится своей национальной кухней, городскими праздниками и фестивалями, художниками с мировыми именами и, конечно, побережьем с нежным золотым песком и кристально чистым Средиземным морем.</p>
       </section>
 
       <section class="section-4">
-        <img class="header-bg" src="./src/assets/img/secondpage/bg4.svg" loading="lazy" />
+        <img class="header-bg" src="/src/assets/img/secondpage/bg4.svg" loading="lazy" />
         <div class="qoute-wrapper second-wrapper">
           <div class="qoute">
-            <img class="img-michail" src="./src/assets/img/Michail.png" />
+            <img class="img-michail" src="/src/assets/img/Michail.png" />
             <p class="section-2__quote-text-bottom">
               <b>Михаил Сидоров</b>,<br />
               представитель Каталонского<br />
@@ -89,7 +89,7 @@
       </section>
 
       <footer class="footer">
-        <img class="footer-bg" src="./src/assets/img/secondpage/footer-bg.svg" />
+        <img class="footer-bg" src="/src/assets/img/secondpage/footer-bg.svg" />
         <div class="footer__fedback">
           <p class="footer__fedback-title">Уважаемые участники!</p>
           <p class="footer__fedback-description">Мы будем рады ответить на любые вопросы о проекте. Пишите нам на почту: <a href="mailto:academy@profi.travel">academy@profi.travel</a></p>
