--- a/src/pages/testPage.html
+++ b/src/pages/testPage.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="test-page-wrapper">
-      <img class="menu-bg" src="./src/assets/menu-bg.svg" loading="lazy" />
+      <img class="menu-bg" src="/src/assets/menu-bg.svg" loading="lazy" />
       <nav class="menu">
         <ul class="menu-list">
           <li class="menu-item"><a href="/index.html#about">О Каталонии</a></li>
@@ -21,7 +21,7 @@
         </ul>
       </nav>
       <header class="header second-header">
-        <img class="test-bg" src="./src/assets/img/testpage/bg-header.svg" loading="lazy" />
+        <img class="test-bg" src="/src/assets/img/testpage/bg-header.svg" loading="lazy" />
         <div class="header-intro">
           <h1 class="header__title">
             Проверяйте<br />
@@ -31,14 +31,14 @@
         </div>
         <a href="#test">
           <button class="second-circle circle">
-            <img class="circle-text header" src="./src/assets/img/header_circle.svg" loading="lazy" />
-            <img class="circle-arrow header" src="./src/assets/header-arrow.svg" loading="lazy" />
+            <img class="circle-text header" src="/src/assets/img/header_circle.svg" loading="lazy" />
+            <img class="circle-arrow header" src="/src/assets/header-arrow.svg" loading="lazy" />
           </button>
         </a>
       </header>
 
       <section id="test" class="test1">
-        <img class="test-bg" src="./src/assets/img/testpage/bg-1.svg" />
+        <img class="test-bg" src="/src/assets/img/testpage/bg-1.svg" />
         <div class="test-wrapper">
           <div class="test-question">
             <p><b>Какой пляж, граничащий с холмами, покрытыми вечнозелеными соснами, получил название «Скалистый»?</b></p>
@@ -68,7 +68,7 @@
       </section>
 
       <section class="test2">
-        <img class="test-bg" src="./src/assets/img/testpage/bg-2.svg" />
+        <img class="test-bg" src="/src/assets/img/testpage/bg-2.svg" />
         <div class="test-wrapper-2">
           <div class="test-question">
             <p><b>Что такое Festa Major?</b></p>
@@ -107,7 +107,7 @@
       </section>
 
       <footer class="footer">
-        <img class="footer-bg" src="./src/assets/img/testpage/footer-bg.svg" />
+        <img class="footer-bg" src="/src/assets/img/testpage/footer-bg.svg" />
         <div class="footer__fedback">
           <p class="footer__fedback-title">Уважаемые участники!</p>
           <p class="footer__fedback-description">Мы будем рады ответить на любые вопросы о проекте. Пишите нам на почту: <a href="mailto:academy@profi.travel">academy@profi.travel</a></p>
